--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "author": "Matheus Melchiades <matheusmacielmelchiades@hotmail.com>",
     "license": "MIT",
     "scripts": {
-        "test": "echo 'RUN TEST'"
+        "test": "yarn run lint",
+        "lint": "eslint --fix ."
     },
     "engines": {
         "node": "12.x",
@@ -14,5 +15,13 @@
     },
     "dependencies": {
         "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "eslint": "^6.5.1",
+        "eslint-config-standard": "^14.1.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-node": "^10.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1"
     }
 }
