--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
         "yarn": "^1.17"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "dotenv": "^8.1.0",
+        "express": "^4.17.1",
+        "pg": "^7.12.1",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^5.19.6",
+        "sqlite3": "^4.1.0"
     },
     "devDependencies": {
         "eslint": "^6.5.1",
@@ -25,6 +30,7 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "prettier": "^1.18.2"
+        "prettier": "^1.18.2",
+        "sequelize-cli": "^5.5.1"
     }
 }
