--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Matheus Melchiades <matheusmacielmelchiades@hotmail.com>",
     "license": "MIT",
     "scripts": {
-        "test": "yarn run lint",
+        "test": "yarn run lint && jest",
         "lint": "eslint --fix ."
     },
     "engines": {
@@ -22,14 +22,17 @@
         "sqlite3": "^4.1.0"
     },
     "devDependencies": {
+        "@types/jest": "^24.0.19",
         "eslint": "^6.5.1",
         "eslint-config-prettier": "^6.4.0",
         "eslint-config-standard": "^14.1.0",
         "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jest": "^22.19.0",
         "eslint-plugin-node": "^10.0.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
+        "jest": "^24.9.0",
         "prettier": "^1.18.2",
         "sequelize-cli": "^5.5.1"
     }
