--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,11 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": ["standard", "prettier"],
-    "plugins": ["prettier"],
+    "plugins": ["prettier", "jest"],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
