--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "author": "Matheus Melchiades <matheusmacielmelchiades@hotmail.com>",
     "license": "MIT",
     "scripts": {
+        "dev": "yarn nodemon server.js",
+        "start": "node server.js",
         "test": "yarn run lint && jest",
         "lint": "eslint --fix ."
     },
@@ -14,8 +16,12 @@
         "yarn": "^1.17"
     },
     "dependencies": {
+        "bunyan": "^1.8.12",
+        "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
+        "glob": "^7.1.4",
+        "morgan": "^1.9.1",
         "pg": "^7.12.1",
         "pg-hstore": "^2.3.3",
         "sequelize": "^5.19.6",
@@ -33,6 +39,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
         "jest": "^24.9.0",
+        "nodemon": "^1.19.4",
         "prettier": "^1.18.2",
         "sequelize-cli": "^5.5.1"
     }
