--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
         "express-boom": "^3.0.0",
+        "express-validator": "^6.2.0",
         "glob": "^7.1.4",
         "morgan": "^1.9.1",
         "pg": "^7.12.1",
