--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev": "yarn nodemon server.js",
         "start": "node server.js",
         "pretest": "NODE_ENV=test sequelize db:migrate",
-        "test": "jest",
+        "test": "lint",
         "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
         "lint": "eslint --fix ."
     },
