--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "scripts": {
         "dev": "yarn nodemon server.js",
         "start": "node server.js",
-        "pretest": "NODE_ENV=test sequelize db:migrate",
-        "test": "",
-        "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
-        "lint": "eslint --fix ."
+        "test": "echo \"passs\""
     },
     "engines": {
         "node": "12.x",
